# aivideo

./: .env.example  .gitignore  LICENSE  README.md  aivideo_db.sql  article.py  autovideo.py  autovideo_list.py  booklist.py  common.py  forgetpwd.py  help.py  imageslist.py  login.py  main.py  pyproject.toml  register.py  requirement.md  requirements.txt  sdxl_styles.json  sendmail.py  square.py  txt2voice.py  user_changepwd.py  user_dashboard.py  user_myvideo.py  user_profile.py  user_service.py  videolist.py  videomerge.py  videoprocess.py  videoview.py
static/css/: index.css  style.css  style_autovideo.css  style_autovideo_list.css  style_index.css
static/css/user/: user_base.css
static/css/v2/: index.css
static/js/: autovideo.js  autovideo_list.js  booklist.js  imageslist.js  index.js  txt2voice.js  videolist.js  videomerge.js
static/js/user/: article.js  article_edit.js  change_password.js  my_video.js  profile.js  user_base.js
static/js/v2/: base.js  createvideo.js  download.js  help.js  index.js  (+3 more)
templates/: autovideo.html  autovideo_list.html  base.html  booklist.html  imageslist.html  index.html  txt2voice.html  videolist.html  videomerge.html
templates/user/: article_edit.html  article_list.html  base_user.html  change_password.html  customer_service.html  dashboard.html  my_videos.html  orders.html  profile.html  recharge.html  sidebar.html
templates/v2/: base.html  createvideo.html  download.html  footer.html  forgetpwd.html  header.html  help.html  index.html  login.html  register.html  square.html  videolist.html  videoview.html  vip.html
