[project]
name = "aibookvideo"
version = "1.3.1"
description = "AI书籍视频生成工具"
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
    "flask>=3.1.1",
    "pymysql>=1.1.1",
    "dotenv==0.9.9",
    "moviepy>=2.2.1",
    "flask-cors>=6.0.1",
    "gradio-client>=1.3.0",
    "pydub>=0.25.1",
    "opencv-python>=4.12.0.88",
]
